Added two new recipes

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   </head>
   <body>
     <h1>Receipes</h1>
-    <a href="../TOP_Recipes/recipes/lasagna.html">Lasagna</a>
+    <ul>
+      <li><a href="../TOP_Recipes/recipes/lasagna.html">Lasagna</a></li>
+      <li><a href="../TOP_Recipes/recipes/pizza.html">Homemade Pizza</a></li>
+      <li><a href="../TOP_Recipes/recipes/tacos.html">Tacos</a></li>
+    </ul>
   </body>
 </html>
