Updated index and added CSS. Will continue to update

--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Recipes</title>
+    <title>Rodiguez Family Recipes</title>
   </head>
   <body>
-    <h1>Receipes</h1>
-    <ul>
-      <li><a href="../TOP_Recipes/recipes/lasagna.html">Lasagna</a></li>
-      <li><a href="../TOP_Recipes/recipes/pizza.html">Homemade Pizza</a></li>
-      <li><a href="../TOP_Recipes/recipes/tacos.html">Tacos</a></li>
-    </ul>
+    <h1 id="site_name">Rodriguez Family Receipes</h1>
+    <nav>
+      <ul>
+        <li><a href="/recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="/recipes/pizza.html">Homemade Pizza</a></li>
+        <li><a href="/recipes/tacos.html">Tacos</a></li>
+      </ul>
+    </nav>
   </body>
 </html>
